Create event and ngo home and events done

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="local_loop">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- maps for web -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDf5_sia3qxAWcuXeVHfpxa_7tWpW7zCHg"></script>
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
